--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
-    implementation project(':searchbarcompose')
-
+    implementation 'com.github.Ericgacoki:SearchBarCompose:1.0.3'
 }
