--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+       // maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
