--- a/searchbarcompose/build.gradle
+++ b/searchbarcompose/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
-        minSdk 19
-        targetSdk 32
+        minSdk 21
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -36,6 +36,20 @@ android {
     }
 }
 
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.Ericgacoki'
+                artifactId = 'searchbarcompose'
+                version = '1.0.0'
+            }
+        }
+    }
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -46,19 +60,5 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation 'com.github.Ericgacoki:SearchBarCompose:1.0.5'
-}
-
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-
-                groupId = 'com.github.Ericgacoki'
-                artifactId = 'search-bar-compose'
-                version = '1.0.0'
-            }
-        }
-    }
+    // implementation 'com.github.Ericgacoki:SearchBarCompose:1.0.5'
 }
